formatting changes to readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -115,11 +115,11 @@ return a job, but there is no direct access to the Job class for creating orphan
   #    autostart: true  # start the timers for this job instantly if horse is running
   horse.addJob(options)
 
-  horse.cancelJob(job)  # takes a job or job.id and removes it from job list and returns it
+  horse.cancelJob(job)  # takes a job or job id and cancels  and returns it
   horse.findJob(id)     # takes a job or job id and returns the corresponding job
 
-  # these methods are available but are lower level and will probably be made private soon
-  # since they are mainly intended for internal use.. probably don't use these directly
+These methods are available but are lower level and will probably be made private soon,
+since they are intended mainly for internal use... probably don't use these directly
   horse.cancelJobAtIndex(index) # cancels and returns job at index in jobs list
-  horse.processJobs()           # processes job list and conditionally removes job or works a job
+  horse.processJobs()           # processes job and conditionally cancels or works job
   horse.animate()               # renders a single frame and requests another animation frame
