--- a/README.rdoc
+++ b/README.rdoc
@@ -5,15 +5,19 @@ animation.
 Jobs are processed every frame in a throttled RAF loop with wormhole patching. Unless paused or canceled, jobs
 begin running after the specified delay has elapsed.
 
-=== Why do you keep saying RAF?
-RAF is an acronym which stands for requestAnimationFrame, which is a much more performant method of running
-scheduled callbacks and animation than setTimeout/setInterval.
+==== Why do you keep saying RAF?
+RAF is an acronym which stands for requestAnimationFrame. It is essentially a much more performant alternative
+to setTimeout/setInterval for running scheduled callbacks and animations.
 
-This tells the browser that we are planning on animating, and we want our callback to be run before the next
-repaint is performed. RAF usually matches your display's refresh rate, however Horse throttles it for situations
-where you want to lock to a given FPS.
+Basically RAF just tells the browser that we are planning on performing some animation, and we want our callback
+to be run before the next repaint is occurs. Usually RAF matches your display's refresh rate, however Horse
+throttles it for situations where you want to lock to a given FPS.
 
-This number is typically 60fps, and Horse also uses this as a default framerate.
+This number is typically 60fps, and Horse also uses this as a default framerate. Only a single instance of Horse
+is ever running at a time, and it sets up a single RAF run loop which will iterate through any added jobs and step
+them once each frame.
+
+You can read the quintessential article on RAF by Paul Irish here: http://www.paulirish.com/2011/requestanimationframe-for-smart-animating/
 
 = Examples
 Adding a job via horse.addJob is the only exposed method of adding a job to the system. The newly created job
