--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,12 @@
+= Contents
+  - {What is this?}[#what-is-this]
+  - {Examples}[#examples]
+  - {APIs}[#apis]
+    - {Jobs API}[#jobs-api]
+    - {Horse API}[#horse-api]
+  - {Why do you keep saying RAF?}[#why_do_you_keep_saying_raf]
+
+
 = What is this?
 Horse is a lightweight run loop built for executing delayed functions over time to simplify tasks like custom
 animation.
@@ -5,19 +14,6 @@ animation.
 Jobs are processed every frame in a throttled RAF loop with wormhole patching. Unless paused or canceled, jobs
 begin running after the specified delay has elapsed.
 
-==== Why do you keep saying RAF?
-RAF is an acronym which stands for requestAnimationFrame. It is essentially a much more performant alternative
-to setTimeout/setInterval for running scheduled callbacks and animations.
-
-Basically RAF just tells the browser that we are planning on performing some animation, and we want our callback
-to be run before the next repaint occurs. Usually RAF matches your display's refresh rate, however Horse
-throttles it for situations where you want to lock to a given FPS.
-
-This number is typically 60fps, and Horse also uses this as a default framerate. Only a single instance of Horse
-is ever running at a time, and it sets up a single RAF run loop which will loop through any added jobs and step
-them once each frame.
-
-You can read the quintessential article on RAF by Paul Irish here: http://www.paulirish.com/2011/requestanimationframe-for-smart-animating/
 
 = Examples
 Adding a job via horse.addJob is the only exposed method of adding a job to the system. The newly created job
@@ -134,3 +130,18 @@ soon since they are intended mainly for internal use... You probably shouldn'tt 
   horse.cancelJobAtIndex(index) # cancels and returns job at index in jobs list
   horse.processJobs()           # processes job and conditionally cancels or works job
   horse.animate()               # renders a single frame and requests another animation frame
+
+
+= Why do you keep saying RAF?
+RAF is an acronym which stands for requestAnimationFrame. It is essentially a much more performant alternative
+to setTimeout/setInterval for running scheduled callbacks and animations.
+
+Basically RAF just tells the browser that we are planning on performing some animation, and we want our callback
+to be run before the next repaint occurs. Usually RAF matches your display's refresh rate, however Horse
+throttles it for situations where you want to lock to a given FPS.
+
+This number is typically 60fps, and Horse also uses this as a default framerate. Only a single instance of Horse
+is ever running at a time, and it sets up a single RAF run loop which will loop through any added jobs and step
+them once each frame.
+
+You can read the quintessential article on RAF by Paul Irish here: http://www.paulirish.com/2011/requestanimationframe-for-smart-animating/
